--- a/templates/index.html
+++ b/templates/index.html
@@ -261,115 +261,98 @@
 
 
     <!-- about section start -->
-    <section class="about-section section-b-space section-mb-space">
-        <div class="bg-effect" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500"></div>
-        <div class="container">
-            <div class="row g-md-5 g-4">
-                <div class="col-lg-6 order-lg-0 order-1">
-                    <div class="about-content">
-                        <div>
-                            <div class="title">
-                                <span class="number-pattern">01.</span>
-                                <h2 class="text-white">AI's Innovative Potential for One-Click Content
-                                    Generation.</h2>
-                            </div>
-                            <p>Crafting influential content requires a deep understanding of your target audience.
-                                Pinpoint your ideal demographic and familiarise yourself with their needs, passions, and
-                                sources of concern.</p>
-                            <ul>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Attract your audience
-                                    with captivating facts in your commercials</li>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Let’s engage with the
-                                    customers effectively </li>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Brighten up your
-                                    content with appealing graphics: pictures, clips, and graphs that will fascinate
-                                    your users!</li>
-                            </ul>
+<section class="about-section section-b-space section-mb-space">
+    <div class="bg-effect" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500"></div>
+    <div class="container">
+        <div class="row g-md-5 g-4">
+            <div class="col-lg-6 order-lg-0 order-1">
+                <div class="about-content">
+                    <div>
+                        <div class="title">
+                            <span class="number-pattern">01.</span>
+                            <h2 class="text-white">Harnessing AI's Power for Textual Content Generation.</h2>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-img">
-                        <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/character/1.svg" class="img-fluid" alt="about">
+                        <p>Utilize the transformative capabilities of AI to generate engaging textual content seamlessly. Gain insights into your target audience and tailor content to resonate with their preferences and needs.</p>
+                        <ul>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Craft compelling stories and narratives to captivate your audience</li>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Engage users effectively through personalized textual interactions</li>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Enhance your content with impactful textual elements: headlines, quotes, and insights</li>
+                        </ul>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="about-img">
+                    <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/character/1.svg" class="img-fluid" alt="about">
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
+
     <!-- about section end -->
 
     <!-- about section start -->
-    <section class="about-section right-version section-b-space section-mb-space">
-        <div class="bg-effect" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500"></div>
-        <div class="container">
-            <div class="row g-md-5 g-4">
-                <div class="col-lg-6">
-                    <div class="about-img">
-                        <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/character/2.svg" class="img-fluid" alt="about">
-                    </div>
+<section class="about-section right-version section-b-space section-mb-space">
+    <div class="bg-effect" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500"></div>
+    <div class="container">
+        <div class="row g-md-5 g-4">
+            <div class="col-lg-6">
+                <div class="about-img">
+                    <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/character/2.svg" class="img-fluid" alt="about">
                 </div>
-                <div class="col-lg-6">
-                    <div class="about-content">
-                        <div>
-                            <div class="title">
-                                <span class="number-pattern">02.</span>
-                                <h2>The key resource for First Page Content Optimisation</h2>
-                            </div>
-                            <p>"Unlock Content Magic: Tailor Your Message to Win Hearts! Discover Your Ideal Audience,
-                                Understand Their Desires, Tastes, and Challenges!"</p>
-                            <ul>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Gain valuable
-                                    insights into their expectations, preferences, and aspirations.</li>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Create captivating
-                                    content that speaks directly to their hearts and minds.</li>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Identify the precise
-                                    pain points and challenges your audience faces, and provide solutions through your
-                                    content. </li>
-                            </ul>
+            </div>
+            <div class="col-lg-6">
+                <div class="about-content">
+                    <div>
+                        <div class="title">
+                            <span class="number-pattern">02.</span>
+                            <h2>The Magic of AI in Content Optimization for the Web</h2>
                         </div>
+                        <p>"Unleash the Power of Tailored Content: Understand Your Audience, Speak to Their Hearts, and Solve Their Challenges!"</p>
+                        <ul>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Gain valuable insights into your audience's expectations, preferences, and aspirations.</li>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Craft captivating content that resonates personally with your audience.</li>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Address your audience's pain points and challenges directly, offering valuable solutions through your content.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
     <!-- about section end -->
 
 
     <!-- about section start -->
-    <section class="about-section section-b-space">
-        <div class="bg-effect" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500"></div>
-        <div class="container">
-            <div class="row g-md-5 g-4">
-                <div class="col-lg-6 order-lg-0 order-1">
-                    <div class="about-content">
-                        <div>
-                            <div class="title">
-                                <span class="number-pattern">03.</span>
-                                <h2 class="text-white">MegaAI: Your Companion for Hashtags, Captions,
-                                    and More!</h2>
-                            </div>
-                            <p>Experience the power of Megabot AI and revolutionise your social media presence. Say
-                                goodbye to writer's block and hello to compelling hashtags, captivating captions, and
-                                endless content possibilities.</p>
-                            <ul>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Curate endless
-                                    content possibilities that make your website shine. </li>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Generates compelling
-                                    hashtags that skyrocket your reach</li>
-                                <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Unlock a world of
-                                    unlimited content ideas that keep your followers hooked.</li>
-                            </ul>
+<section class="about-section section-b-space">
+    <div class="bg-effect" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500"></div>
+    <div class="container">
+        <div class="row g-md-5 g-4">
+            <div class="col-lg-6 order-lg-0 order-1">
+                <div class="about-content">
+                    <div>
+                        <div class="title">
+                            <span class="number-pattern">03.</span>
+                            <h2 class="text-white">MegaAI: Your Ultimate Content Companion</h2>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-img">
-                        <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/character/3.svg" class="img-fluid" alt="about">
+                        <p>Unlock the potential of MegaBot AI to revolutionize your content creation process. Bid farewell to creative blocks and welcome captivating captions, engaging content, and limitless possibilities.</p>
+                        <ul>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Explore endless content ideas to enhance your online presence.</li>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Craft compelling content that resonates with your audience.</li>
+                            <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Unleash a world of creative possibilities to keep your followers engaged.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="about-img">
+                    <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/character/3.svg" class="img-fluid" alt="about">
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
     <!-- about section end -->
 
 
