--- a/templates/chat.html
+++ b/templates/chat.html
@@ -738,8 +738,8 @@
                             </div>
                             <div class="card-footer">
                                 <div class="setting-btn">
-                                    <button class="select-plan">Update</button>
-                                    <button class="no-select-plan select-plan">Cancel</button>
+                                    <button class="select-plan" value="submit">Update</button>
+                                    <button class="no-select-plan select-plan" value="submit">Cancel</button>
                                 </div>
                             </div>
                         </div>
