--- a/templates/chat.html
+++ b/templates/chat.html
@@ -676,14 +676,6 @@
                     <div class="main-section d-flex gap-4 flex-column">
 
 
-
-
-
-
-
-
-
-
                         <div class="container card p-0">
                             <div class="card-header">
                                 <h3 class="text-white">My Account</h3>
@@ -714,50 +706,44 @@
                                         {% endif %}
                                     </div>
 
-                                    <form class="msger-inputarea mb-0" method="post">
+                                    <form class="msger-inputarea mb-0" method="post" url="{% url 'upload-data' %}">
                                         {% csrf_token %}
                                         <div class="row">
                                             {% if current_user %}
                                             <div class="col-sm-6 col-12">
                                                 <div class="mb-3">
                                                     <label for="firstname" class="form-label">Name</label>
-                                                    <input type="text" class="msger-input" name ="firstname"
+                                                    <input type="email" class="msger-input" name ="firstname"
                                                         placeholder="{{current_user.username}}">
                                                 </div>
                                             </div>
                                             <div class="col-sm-6 col-12">
                                                 <div class="mb-3">
                                                     <label for="lastname" class="form-label">Gender</label>
-                                                    <input type="text" class="msger-input" name= "gender"
+                                                    <input type="email" class="msger-input" name= "gender"
                                                         placeholder="{{current_user.gender}}">
                                                 </div>
-                                            </div>
+                                            </div>s
                                             <div class="col-sm-6 col-12">
                                                 <div class="mb-3">
                                                     <label for="emailid" class="form-label">Email address</label>
                                                     <input type="email" class="msger-input" name="emailid"
-                                                        placeholder="{{current_user.email}}" >
+                                                        placeholder="{{current_user.email}}">
                                                 </div>
                                             </div>
                                             {% endif %}
                                         </div>
                                     </form>
+
                                 </div>
                             </div>
                             <div class="card-footer">
                                 <div class="setting-btn">
-                                    <button class="select-plan" value="submit">Update</button>
-                                    <!-- <button class="no-select-plan select-plan" value="submit">Cancel</button> -->
+                                    <button class="select-plan">Update</button>
+                                    <button class="no-select-plan select-plan">Cancel</button>
                                 </div>
                             </div>
                         </div>
-
-
-
-
-
-
-
 
 
                         <div class="container card p-0">
@@ -772,7 +758,7 @@
                                                 <div class="mb-3">
                                                     <label for="firstname" class="form-label">Current Password</label>
                                                     <input type="email" class="msger-input" id="firstname"
-                                                        placeholder="*************" >
+                                                        placeholder="*************">
                                                 </div>
                                             </div>
                                             <div class="col-sm-6 col-12">
@@ -839,36 +825,26 @@
     <div id="cursor-border"></div>
     <!--custom cursor start  -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-    <!-- Bootstrap js-->
-    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js'%}"></script>
 
     <!-- slider js-->
-    <script src="{% static 'assets/js/swiper-bundle.min.js' %}"></script>
-    <script src="{% static 'assets/js/custom-slider.js' %}"></script>
+    <script src="{% static 'assets/js/swiper-bundle.min.js'%}"></script>
+    <script src="{% static 'assets/js/custom-slider.js'%}"></script>
 
     <!-- custom cursor -->
-    <script src="{% static 'assets/js/custom-cursor.js' %}"></script>
-
-    <!-- aos animation -->
-    <script src="{% static 'assets/js/aos.js' %}"></script>
-    <script src="{% static 'assets/js/custom-aos.js' %}"></script>
+    <script src="{% static 'assets/js/custom-cursor.js'%}"></script>
 
     <!-- iconsax js -->
-    <script src="{% static 'assets/js/iconsax.js' %}"></script>
+    <script src="{% static 'assets/js/iconsax.js'%}"></script>
 
-    <!-- laptop animation js -->
-    <script src="{% static 'assets/js/home-animation.js' %}"></script>
+    <!-- chat page js -->
+    <script src="{% static 'assets/js/chat-page.js'%}"></script>
 
-    <!-- header sticky js -->
-    <script src="{% static 'assets/js/header_sticky.js' %}"></script>
-
-    <!-- pricing js -->
-    <script src="{% static 'assets/js/pricing-table.js' %}"></script>
+    <!-- iconsax js -->
+    <script src="{% static 'assets/js/chatting.js'%}"></script>
 
     <!-- Theme js-->
-    <script src="{% static 'assets/js/script.js' %}"></script>
-    <script src="{% static 'assets/js/chatting.js' %}"></script>
+    <script src="{% static 'assets/js/script.js'%}"></script>
 
     <!--AXJS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
