--- a/templates/chat.html
+++ b/templates/chat.html
@@ -219,7 +219,7 @@
                                 <i class="iconsax" data-icon="text-align-justify"></i>
                             </button>
                             <input type="text" class="msger-input" id="userInput" placeholder="Ask any question here..." />
-                            <!-- <a href="#" class="scan-icon"><i class="iconsax" data-icon="scan-1"></i></a> -->
+                            <a href="#" class="scan-icon"><i class="iconsax" data-icon="scan-1"></i></a>
 
                             <a href="#" id="mic-listen" class="mic-icon"><i class="iconsax" data-icon="mic-2"></i></a>
 
